--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<h1>To Do List</h1>
-<form method="post" action="/addTodo">
-    <input type="text" name="todo" />
-    <input type="submit" value="Add Task"/>
-</form>
-<hr>
-    <ul>
-        <li th:each="todo : ${todos}">
-            <span th:text="${todo.todo}" />
-        </li>
-    </ul>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>To Do</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/static/CSS/style.css">
+    <!-- Confetti JS -->
+    <script src="/static/js/confetti.js" defer></script>
+</head>
+<body>
+
+<main>
+    <canvas class="confetti" id="canvas"></canvas>
+    <div class="container">
+        <div class="box">
+            <div class="notes">
+                <div class="notes-title">
+                    <h1>To Do List</h1>
+                </div>
+                <div class="notes-form">
+                    <form action="/addTodo" method="post">
+                        <input name="todo" type="text"/>
+                        <input type="submit" value="+" class="btn"/>
+                    </form>
+                </div>
+                <hr>
+                <div class="notes-list">
+                    <div class="task" th:each="todo : ${todos}">
+                        <input type="checkbox" class="radio" id="done">
+                        <span class="label-text" th:text="${todo.todo}"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+</body>
 </html>
