--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -14,9 +14,9 @@
     <div class="container">
         <div class="box">
             <div class="notes">
-                <div class="notes-close">
-                    <button type="button" class="resetList">X</button>
-                </div>
+<!--                <div class="notes-close">-->
+<!--                    <button type="button" class="resetList" >X</button>-->
+<!--                </div>-->
                 <div class="notes-title">
                     <h1>To Do List</h1>
                 </div>
@@ -30,7 +30,7 @@
                 <div class="notes-list">
                     <div class="task" th:each="todo : ${todos}">
                         <input type="checkbox" class="radio done" id="done">
-                        <span class="label-text" th:text="${todo.todo}"/>
+                        <label class="label-text" th:text="${todo.todo}" />
                     </div>
                 </div>
             </div>
